<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="vm"
            type="com.example.valorpay.viewmodel.ProfileViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/baseline_arrow_back_24"
            android:id="@+id/img_back"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:visibility="gone"/>

        <TextView
            android:text="@string/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textSize="20dp"
            android:textColor="@color/colorPrimary"
            android:gravity="center_vertical"
            android:textStyle="bold"
            android:textAllCaps="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_back"
            android:id="@+id/textView"
            android:visibility="gone"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@+id/textView">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:hint="@string/name"
                android:inputType="textEmailAddress"
                android:text="@={vm.reg.name}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/layoutName">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtEmail1"
                android:layout_width="match_parent"
                android:textColor="@color/black"
                android:layout_height="wrap_content"
                android:hint="@string/mail"
                android:inputType="text"
                android:text="@={vm.reg.email}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/layoutEmail">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtLastName1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:hint="@string/phone_number"
                android:inputType="number"
                android:text="@={vm.reg.phoneNumber}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutDob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="12dp"
            android:focusable="false"
            android:cursorVisible="false"
            app:layout_constraintTop_toBottomOf="@+id/layoutPhone">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_dob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:hint="@string/dob"
                android:inputType="number"
                android:text="@={vm.reg.dob}"
                android:focusable="false"
                android:cursorVisible="false"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etPasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/layoutDob"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:visibility="gone">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:text="@={vm.reg.password}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:text="@string/update"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:textColor="@color/white"
            android:textAllCaps="false"
            app:layout_constraintTop_toBottomOf="@id/etPasswordLayout"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:onClick="@{()-> vm.callReg()}"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>