<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="vm"
            type="com.example.valorpay.viewmodel.LoginViewModel" />
    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

    <com.google.android.material.textview.MaterialTextView
        android:text="@string/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"
        android:gravity="center_vertical"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/textView"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/textView">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtLastName1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:hint="@string/phone_number"
            android:inputType="number"
            android:text="@={vm.reg.phoneNumber}"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etPasswordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/layoutPhone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:text="@={vm.reg.password}"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:text="@string/login"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:textColor="@color/white"
        android:id="@+id/button"
        app:layout_constraintTop_toBottomOf="@id/etPasswordLayout"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:onClick="@{()-> vm.callReg()}"/>

    <com.google.android.material.textview.MaterialTextView
        android:text="@string/register_u"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textSize="16sp"
        android:textColor="@color/colorPrimary"
        android:gravity="center_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button"
        android:id="@+id/txt_register"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

</layout>