<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ededed"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.payment.PaymentFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/pay"
        android:fillViewport="true"
        android:layout_margin="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:id="@+id/recyclerview"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                tools:listitem="@layout/adapter_view_cart"
                tools:itemCount="2"/>
            <!--/>-->

            <androidx.cardview.widget.CardView
                android:id="@+id/price_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/recyclerview"
                app:cardCornerRadius="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                app:cardUseCompatPadding="true">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    app:layout_constraintStart_toStartOf="parent">

                    <TextView
                        android:id="@+id/net_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:text="@string/item_total"
                        android:textSize="15sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/val_net_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="0"
                        android:textSize="15sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/state_tax"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/net_price"
                        android:text="@string/state_tax"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:layout_marginTop="8dp"/>

                    <TextView
                        android:id="@+id/val_state_tax"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/val_net_price"
                        tools:text="0"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:layout_marginTop="8dp"/>

                    <TextView
                        android:id="@+id/custom_fee"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/state_tax"
                        android:text="@string/custom_fee"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:layout_marginTop="8dp"/>

                    <TextView
                        android:id="@+id/val_custom_fee"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/val_state_tax"
                        tools:text="0"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:layout_marginTop="8dp"/>

                    <View
                        android:id="@+id/view"
                        android:layout_width="match_parent"
                        android:layout_height="5dp"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/dotted_line"
                        app:layout_constraintTop_toBottomOf="@+id/val_custom_fee"/>

                    <TextView
                        android:id="@+id/to_pay"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/view"
                        android:text="@string/to_pay"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:layout_marginTop="8dp"/>

                    <TextView
                        android:id="@+id/val_to_pay"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/view"
                        tools:text="0"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:layout_marginTop="8dp"/>


                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:id="@+id/cardRecyclerview"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/price_card"
                android:layout_marginTop="12dp"
                tools:listitem="@layout/payment_card"
                tools:itemCount="3"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <Button
        android:text="@string/pay"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:textColor="@color/white"
        android:id="@+id/pay"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp" />

</androidx.constraintlayout.widget.ConstraintLayout>